# minimal-toml

./: .gitignore  Cargo.toml  README.md  README.tpl
.github/workflows/: main.yml
.vim/: coc-settings.json
src/: de.rs  error.rs  lexer.rs  lib.rs  parser.rs
tests/: bool.rs  enum.rs  struct.rs
tests/common/: mod.rs
testsuite/: Cargo.toml
testsuite/src/: array_test.rs  bench.rs  bool_test.rs  enum_test.rs  lib.rs  struct_test.rs
