[package]
name = "minimal-toml"
version = "0.1.0"
edition = "2018"
authors = ["Troy Neubauer <troyneubauer@gmail.com>", "Luke Newcomb <newcomb.luke@protonmail.com>"]
repository = "https://github.com/TroyNeubauer/minimal-toml"
description = "A minimal, serde-backed, toml deserializer for no_std and no alloc embedded systems"
license = "MIT"
readme = "README.md"
keywords = ["decoding"]
categories = ["config", "decoding", "parser-implementations"]

[dependencies]
logos = "0.12"
