[package]
name = "minimal-toml"
version = "0.1.0"
edition = "2018"
authors = ["Troy Neubauer <troyneubauer@gmail.com>", "Luke Newcomb <newcomb.luke@protonmail.com>"]
repository = "https://github.com/TroyNeubauer/minimal-toml"
description = "A no_std toml deserializer for embedded systems"
license = "MIT"
readme = "README.md"
keywords = ["decoding", "no_std"]
categories = ["config", "encoding", "parser-implementations", "no-std"]

[dependencies]
logos = "0.12"
serde = { version = "1.0.100", default-features = false }
